# Sing-box-install

./: .gitignore  GUI_DEVELOPMENT_PLAN.md  IMPLEMENTATION_TASKS.md  README.md  pyproject.toml
packaging/: singbox-gui  singbox-gui-helper  singbox-gui.desktop
packaging/deb/: control.template  postinst  postrm
packaging/polkit/: org.singbox.gui.policy
scripts/: build_deb.sh  install_dev_deps.sh  install_polkit_helper.sh  run_dev.sh
src/singbox_gui/: __init__.py  app.py  autostart.py  command.py  config_adapter.py  models.py  paths.py  privileged.py  profiles.py  service.py  subscriptions.py
src/singbox_gui/ui/: main_window.py
